--- a/pom.xml
+++ b/pom.xml
@@ -68,14 +68,14 @@
             </plugin>-->
 
             <!--maven deploy 忽略发布插件-->
-            <plugin>
+            <!--<plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-deploy-plugin</artifactId>
                 <version>2.8.2</version>
                 <configuration>
                     <skip>true</skip>
                 </configuration>
-            </plugin>
+            </plugin>-->
         </plugins>
     </build>
 
