--- a/pom.xml
+++ b/pom.xml
@@ -54,7 +54,7 @@
             </plugin>
 
             <!-- docker打包插件 -->
-            <!--<plugin>
+            <plugin>
                 <groupId>com.spotify</groupId>
                 <artifactId>dockerfile-maven-plugin</artifactId>
                 <version>1.4.10</version>
@@ -65,17 +65,17 @@
                         <JAR_FILE>target/${project.build.finalName}.jar</JAR_FILE>
                     </buildArgs>
                 </configuration>
-            </plugin>-->
+            </plugin>
 
             <!--maven deploy 忽略发布插件-->
-            <!--<plugin>
+            <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-deploy-plugin</artifactId>
                 <version>2.8.2</version>
                 <configuration>
                     <skip>true</skip>
                 </configuration>
-            </plugin>-->
+            </plugin>
         </plugins>
     </build>
 
