--- a/pom.xml
+++ b/pom.xml
@@ -66,6 +66,7 @@
                 <artifactId>dockerfile-maven-plugin</artifactId>
                 <version>1.4.10</version>
                 <configuration>
+                    <repository>/var/jenkins_home/workspace/docker_file</repository>
                     <tag>${project.version}</tag>
                     <buildArgs>
                         <JAR_FILE>target/${project.build.finalName}.jar</JAR_FILE>
